@@ -2,368 +2,341 @@ package com.tcode.moviebase.Services;
 
 import com.tcode.moviebase.Dtos.MovieWithAvgGradeDto;
 import com.tcode.moviebase.Entities.Movie;
-
+import com.tcode.moviebase.Exceptions.InvalidMovieDataException;
+import com.tcode.moviebase.Exceptions.MovieNotFoundException;
+import com.tcode.moviebase.Mappers.MovieMapper;
 import com.tcode.moviebase.Repositories.MovieRepository;
 import com.tcode.moviebase.Repositories.WatchedMoviesRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.*;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+
 
 @ExtendWith(MockitoExtension.class)
 class MovieServiceTest {
 
     @Mock
     private MovieRepository movieRepository;
-
     @Mock
     private WatchedMoviesRepository watchedMoviesRepository;
-
-
+    @Mock
+    private MovieMapper movieMapper;
 
     @InjectMocks
     private MovieService movieService;
 
-
-
     @Test
-    void getAllMoviesReturnsList() {
-        Movie m1 = new Movie();
-        Movie m2 = new Movie();
-        when(movieRepository.findAll()).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.getAllMovies();
-
-        assertEquals(2, result.size());
-    }
-
-    @Test
-    void addMovieSavesMovie() {
+    void addMovie_success() {
         Movie movie = new Movie();
-        when(movieRepository.save(movie)).thenReturn(movie);
+        movie.setTitle("Title");
+        movie.setMovie_year(2024);
 
-        Movie result = movieService.addMovie(movie);
+        MovieWithAvgGradeDto dto = dummyDto("Title");
+        when(movieRepository.save(movie)).thenReturn(movie);
+        when(movieMapper.movieToMovieWithAvgGradeDto(movie)).thenReturn(dto);
+
+        MovieWithAvgGradeDto result = movieService.addMovie(movie);
 
         assertNotNull(result);
+        assertEquals("Title", result.getTitle());
         verify(movieRepository).save(movie);
+        verify(movieMapper).movieToMovieWithAvgGradeDto(movie);
     }
 
     @Test
-    void deleteMovieDeletesById() {
-        Long id = 1L;
+    void addMovie_missingTitle_throws() {
+        Movie movie = new Movie();
+        movie.setMovie_year(2024);
+        assertThrows(InvalidMovieDataException.class, () -> movieService.addMovie(movie));
+        verify(movieRepository, never()).save(any());
+    }
+
+    @Test
+    void addMovie_missingYear_throws() {
+        Movie movie = new Movie();
+        movie.setTitle("X");
+        assertThrows(InvalidMovieDataException.class, () -> movieService.addMovie(movie));
+        verify(movieRepository, never()).save(any());
+    }
+
+    @Test
+    void deleteMovie_existing_deletes() {
+        Long id = 10L;
+        when(movieRepository.existsById(id)).thenReturn(true);
 
         movieService.deleteMovie(id);
-        verify(movieRepository).deleteMovieById(id);
+
+        verify(movieRepository).deleteById(id);
     }
 
     @Test
-    void search_returnsMatchingMovies() {
-        String search = "test";
-        Movie m1 = new Movie();
-        m1.setTitle("Test Movie");
-        Movie m2 = new Movie();
-        m2.setTitle("Another Test Movie");
-        when(movieRepository.findByTitleIgnoreCaseContaining(search)).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.search(search);
-
-        assertEquals(2, result.size());
-        verify(movieRepository).findByTitleIgnoreCaseContaining(search);
+    void deleteMovie_notExisting_throws() {
+        Long id = 11L;
+        when(movieRepository.existsById(id)).thenReturn(false);
+        assertThrows(MovieNotFoundException.class, () -> movieService.deleteMovie(id));
+        verify(movieRepository, never()).deleteById(anyLong());
     }
 
     @Test
-    void findByCategory_returnsMoviesByCategory() {
-        String category = "Action";
-        Movie m1 = new Movie();
-        m1.setCategory(category);
-        Movie m2 = new Movie();
-        m2.setCategory(category);
-        when(movieRepository.findMoviesByCategory(category)).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.findByCategory(category);
-
-        assertEquals(2, result.size());
-        verify(movieRepository).findMoviesByCategory(category);
-    }
-
-
-
-    @Test
-    void getAllMoviesReturnsEmptyListWhenNoMovies() {
-        when(movieRepository.findAll()).thenReturn(List.of());
-
-        List<Movie> result = movieService.getAllMovies();
-
-        assertTrue(result.isEmpty());
-        verify(movieRepository).findAll();
-    }
-
-    @Test
-    void searchReturnsEmptyListWhenNoMatches() {
-        String search = "test";
-        when(movieRepository.findByTitleIgnoreCaseContaining(search)).thenReturn(List.of());
-
-        List<Movie> result = movieService.search(search);
-
-        assertTrue(result.isEmpty());
-        verify(movieRepository).findByTitleIgnoreCaseContaining(search);
-    }
-
-    @Test
-    void findByCategoryReturnsEmptyListWhenNoMatches() {
-        String category = "test";
-        when(movieRepository.findMoviesByCategory(category)).thenReturn(List.of());
-
-        List<Movie> result = movieService.findByCategory(category);
-
-        assertTrue(result.isEmpty());
-        verify(movieRepository).findMoviesByCategory(category);
-    }
-
-
-
-    @Test
-    void updateMovieTest() {
+    void updateMovie_updatesSelectedFields() {
         Long id = 1L;
-        Movie movie = new Movie();
-        movie.setId(id);
-        movie.setTitle("test");
-        when(movieRepository.findById(id)).thenReturn(Optional.of(movie));
-        when(movieRepository.save(movie)).thenReturn(movie);
+        Movie existing = new Movie();
+        existing.setId(id);
+        existing.setCategory("Old");
+        existing.setDescription("OldDesc");
+        existing.setPrizes("OldPrizes");
+        existing.setTag("OldTag");
+        existing.setWorld_premiere(LocalDate.of(2020,1,1));
+        existing.setPolish_premiere(LocalDate.of(2020,2,2));
 
+        Movie update = new Movie();
+        update.setCategory("NewCat");
+        update.setDescription("NewDesc");
+        update.setPrizes("NewPrizes");
+        update.setTag("NewTag");
+        update.setWorld_premiere(LocalDate.of(2024,3,3));
+        update.setPolish_premiere(LocalDate.of(2024,4,4));
 
-        Long id2 = 2L;
-        Movie movie2 = new Movie();
-        movie2.setId(id2);
-        movie2.setTitle("test2");
-        when(movieRepository.findById(id)).thenReturn(Optional.of(movie));
-        when(movieRepository.save(movie)).thenReturn(movie);
+        MovieWithAvgGradeDto mapped = dummyDto("Whatever");
+        when(movieRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(movieRepository.save(existing)).thenReturn(existing);
+        when(movieMapper.movieToMovieWithAvgGradeDto(existing)).thenReturn(mapped);
 
-        Movie result = movieService.updateMovie(id, movie2);
+        MovieWithAvgGradeDto result = movieService.updateMovie(id, update);
 
         assertNotNull(result);
-        assertEquals("test2", result.getTitle());
+        assertEquals("NewCat", existing.getCategory());
+        assertEquals("NewDesc", existing.getDescription());
+        assertEquals("NewPrizes", existing.getPrizes());
+        assertEquals("NewTag", existing.getTag());
+        assertEquals(LocalDate.of(2024,3,3), existing.getWorld_premiere());
+        assertEquals(LocalDate.of(2024,4,4), existing.getPolish_premiere());
+        verify(movieRepository).save(existing);
+        verify(movieMapper).movieToMovieWithAvgGradeDto(existing);
     }
 
-
-
-
+    @Test
+    void updateMovie_notFound_throws() {
+        when(movieRepository.findById(99L)).thenReturn(Optional.empty());
+        assertThrows(MovieNotFoundException.class, () -> movieService.updateMovie(99L, new Movie()));
+    }
 
     @Test
-    void getMovieByIdReturnsMovieWhenExists() {
-        Long id = 12L;
+    void getMovieById_found() {
+        Long id = 5L;
         Movie movie = new Movie();
         when(movieRepository.findById(id)).thenReturn(Optional.of(movie));
 
         Movie result = movieService.getMovieById(id);
 
-        assertNotNull(result);
+        assertSame(movie, result);
         verify(movieRepository).findById(id);
     }
 
-
     @Test
-    void getMoviesByTagReturnsMoviesWithTag() {
-        String tag = "new";
-        Movie m1 = new Movie();
-        m1.setTag(tag);
-        Movie m2 = new Movie();
-        m2.setTag(tag);
-        when(movieRepository.findByTagContaining(tag)).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.getMoviesByTag(tag);
-
-        assertEquals(2, result.size());
-        verify(movieRepository).findByTagContaining(tag);
+    void getMovieById_notFound_throws() {
+        when(movieRepository.findById(6L)).thenReturn(Optional.empty());
+        assertThrows(MovieNotFoundException.class, () -> movieService.getMovieById(6L));
     }
 
     @Test
-    void testGetMoviesByPremiereYear() {
-        int premiereYear = 2023;
-        Movie m1 = new Movie();
-        m1.setMovie_year(premiereYear);
-        Movie m2 = new Movie();
-        m2.setMovie_year(premiereYear);
-        when(movieRepository.findAll()).thenReturn(Arrays.asList(m1, m2));
+    void getMoviesWithAvgGradeDesc_delegates() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<MovieWithAvgGradeDto> page = new PageImpl<>(List.of(dummyDto("A")));
+        when(movieRepository.findAllMoviesWithAvgGradeDesc(pageable)).thenReturn(page);
 
-        List<Movie> result = movieService.getMoviesByPremiereYear(premiereYear);
+        Page<MovieWithAvgGradeDto> result = movieService.getMoviesWithAvgGradeDesc(pageable);
 
-        assertEquals(2, result.size());
-        verify(movieRepository).findAll();
+        assertEquals(1, result.getTotalElements());
+        verify(movieRepository).findAllMoviesWithAvgGradeDesc(pageable);
     }
 
     @Test
-    void testGetMoviesByPremiereYearReturnsEmptyListWhenNoMatches() {
-        int premiereYear = 2023;
-        when(movieRepository.findAll()).thenReturn(List.of());
+    void getMoviesWithAvgGradeAsc_delegates() {
+        Pageable pageable = PageRequest.of(0, 5);
+        Page<MovieWithAvgGradeDto> page = new PageImpl<>(List.of(dummyDto("B")));
+        when(movieRepository.findAllMoviesWithAvgGradeAsc(pageable)).thenReturn(page);
 
-        List<Movie> result = movieService.getMoviesByPremiereYear(premiereYear);
+        Page<MovieWithAvgGradeDto> result = movieService.getMoviesWithAvgGradeAsc(pageable);
 
-        assertTrue(result.isEmpty());
-        verify(movieRepository).findAll();
+        assertEquals(1, result.getTotalElements());
+        verify(movieRepository).findAllMoviesWithAvgGradeAsc(pageable);
     }
 
     @Test
-    void testGetMoviesByWorldPremiereMonthAndYear() {
-        int month = 5;
-        int year = 2023;
-        Movie m1 = new Movie();
-        m1.setWorld_premiere(LocalDate.of(year, month, 15));
-        Movie m2 = new Movie();
-        m2.setWorld_premiere(LocalDate.of(year, month, 20));
-        when(movieRepository.findMovieByWorldPremiereMonthAndYear(month, year)).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.getMoviesByWorldPremiereMonthAndYear(month, year);
-
-        assertEquals(2, result.size());
-        verify(movieRepository).findMovieByWorldPremiereMonthAndYear(month, year);
-    }
-
-    @Test
-    void testGetMoviesByPolishPremiereMonthAndYear() {
-        int month = 6;
-        int year = 2023;
-        Movie m1 = new Movie();
-        m1.setPolish_premiere(LocalDate.of(year, month, 10));
-        Movie m2 = new Movie();
-        m2.setPolish_premiere(LocalDate.of(year, month, 25));
-        when(movieRepository.findMovieByPolishPremiereMonthAndYear(month, year)).thenReturn(Arrays.asList(m1, m2));
-
-        List<Movie> result = movieService.getMoviesByPolishPremiereMonthAndYear(month, year);
-
-        assertEquals(2, result.size());
-        verify(movieRepository).findMovieByPolishPremiereMonthAndYear(month, year);
-    }
-
-    @Test
-    void testGetMoviesWithAvgGradeSortedDesc() {
-        MovieWithAvgGradeDto m1 = new MovieWithAvgGradeDto("Movie 1", 2023, "Action", "Description 1", "Prizes 1", LocalDate.of(2023, 5, 1), LocalDate.of(2023, 6, 1), "Tag 1", 0,4.5);
-        MovieWithAvgGradeDto m2 = new MovieWithAvgGradeDto("Movie 2", 2022, "Drama", "Description 2", "Prizes 2", LocalDate.of(2022, 7, 1), LocalDate.of(2022, 8, 1), "Tag 2", 0,3.8);
-        when(movieRepository.findAllMoviesWithAvgGradeDesc()).thenReturn(Arrays.asList(m1, m2));
-
-        List<MovieWithAvgGradeDto> result = movieService.getMoviesWithAvgGradeDesc();
-
-        assertEquals(2, result.size());
-        assertEquals(4.5, result.get(0).getAvgGrade());
-        assertEquals(3.8, result.get(1).getAvgGrade());
-        verify(movieRepository).findAllMoviesWithAvgGradeDesc();
-    }
-
-    @Test
-    void testGetMoviesWithAvgGradeSortedAsc() {
-        MovieWithAvgGradeDto m1 = new MovieWithAvgGradeDto("Movie 1", 2023, "Action", "Description 1", "Prizes 1", LocalDate.of(2023, 5, 1), LocalDate.of(2023, 6, 1), "Tag 1", 0,2.5);
-        MovieWithAvgGradeDto m2 = new MovieWithAvgGradeDto("Movie 2", 2022, "Drama", "Description 2", "Prizes 2", LocalDate.of(2022, 7, 1), LocalDate.of(2022, 8, 1), "Tag 2", 0,3.8);
-        when(movieRepository.findAllMoviesWithAvgGradeAsc()).thenReturn(Arrays.asList(m1, m2));
-
-        List<MovieWithAvgGradeDto> result = movieService.getMoviesWithAvgGradeAsc();
-
-        assertEquals(2, result.size());
-        assertEquals(2.5, result.get(0).getAvgGrade());
-        assertEquals(3.8, result.get(1).getAvgGrade());
-        verify(movieRepository).findAllMoviesWithAvgGradeAsc();
-    }
-
-    @Test
-    void testGetTop10MoviesByAvgGrade() {
-        MovieWithAvgGradeDto m1 = new MovieWithAvgGradeDto("Movie 1", 2023, "Action", "Description 1", "Prizes 1", LocalDate.of(2023, 5, 1), LocalDate.of(2023, 6, 1), "Tag 1", 0,4.5);
-        MovieWithAvgGradeDto m2 = new MovieWithAvgGradeDto("Movie 2", 2022, "Drama", "Description 2", "Prizes 2", LocalDate.of(2022, 7, 1), LocalDate.of(2022, 8, 1), "Tag 2", 0,3.8);
-        when(movieRepository.findTop10MoviesByAvgGrade()).thenReturn(Arrays.asList(m1, m2));
+    void getTopTenMoviesWithAvgGrade_delegates() {
+        var list = List.of(dummyDto("M1"), dummyDto("M2"));
+        when(movieRepository.findTop10MoviesByAvgGrade()).thenReturn(list);
 
         List<MovieWithAvgGradeDto> result = movieService.getTopTenMoviesWithAvgGrade();
 
         assertEquals(2, result.size());
-        assertEquals(4.5, result.get(0).getAvgGrade());
-        assertEquals(3.8, result.get(1).getAvgGrade());
         verify(movieRepository).findTop10MoviesByAvgGrade();
     }
 
     @Test
-    void testGetMoviesPropositionForUser() {
-        String userId = "user1";
-        var watched1 = new Movie();
-        watched1.setCategory("Action");
-        var watched2 = new Movie();
-        watched2.setCategory("Comedy");
-        var watchedMovies = Arrays.asList(watched1, watched2);
+    void getMoviesPropositionForUser() {
+        String userId = "u1";
+        Movie m1 = new Movie(); m1.setCategory("Action");
+        Movie m2 = new Movie(); m2.setCategory("Drama");
+        List<Movie> watched = List.of(m1, m2);
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<MovieWithAvgGradeDto> propositions = new PageImpl<>(List.of(dummyDto("X"), dummyDto("Y")));
+        when(watchedMoviesRepository.findMoviesByUserId(userId)).thenReturn(watched);
+        when(movieRepository.findMoviesPropositionByCategoriesDontIncludeWatchedMovies(
+                List.of("Action","Drama"), watched, pageable)).thenReturn(propositions);
 
-        var categories = Arrays.asList("Action", "Comedy");
-        var prop1 = mock(MovieWithAvgGradeDto.class);
-        var prop2 = mock(MovieWithAvgGradeDto.class);
+        Page<MovieWithAvgGradeDto> result = movieService.getMoviesPropositionForUser(userId, pageable);
 
-        when(watchedMoviesRepository.findMoviesByUserId(userId)).thenReturn(watchedMovies);
-        when(movieRepository.findMoviesPropositionByCategoriesDontIncludeWatchedMovies((categories), (watchedMovies)))
-                .thenReturn(Arrays.asList(prop1, prop2));
-
-        var result = movieService.getMoviesPropositionForUser(userId);
-
-        assertEquals(2, result.size());
+        assertEquals(2, result.getTotalElements());
         verify(watchedMoviesRepository).findMoviesByUserId(userId);
-        verify(movieRepository).findMoviesPropositionByCategoriesDontIncludeWatchedMovies(categories, watchedMovies);
     }
 
     @Test
-    void testGetMoviesPropositionForUserReturnsEmptyListWhenNoWatchedMovies() {
-        var userId = "user2";
-        when(watchedMoviesRepository.findMoviesByUserId(userId)).thenReturn(List.of());
-        when(movieRepository.findMoviesPropositionByCategoriesDontIncludeWatchedMovies(List.of(), List.of()))
-                .thenReturn(List.of());
-
-        var result = movieService.getMoviesPropositionForUser(userId);
-
-        assertTrue(result.isEmpty());
-        verify(watchedMoviesRepository).findMoviesByUserId(userId);
-        verify(movieRepository).findMoviesPropositionByCategoriesDontIncludeWatchedMovies(List.of(), List.of());
+    void movieExists_true() {
+        when(movieRepository.existsById(1L)).thenReturn(true);
+        assertTrue(movieService.movieExists(1L));
     }
 
     @Test
-    void testGetMoviesPropositionForUserReturnsEmptyListWhenNoPropositions() {
-        var userId = "user3";
-        var watched = new Movie();
-        watched.setCategory("Drama");
-        var watchedMovies = List.of(watched);
-        var categories = List.of("Drama");
-
-        when(watchedMoviesRepository.findMoviesByUserId(userId)).thenReturn(watchedMovies);
-        when(movieRepository.findMoviesPropositionByCategoriesDontIncludeWatchedMovies(categories, watchedMovies))
-                .thenReturn(List.of());
-
-        var result = movieService.getMoviesPropositionForUser(userId);
-
-        assertTrue(result.isEmpty());
-        verify(watchedMoviesRepository).findMoviesByUserId(userId);
-        verify(movieRepository).findMoviesPropositionByCategoriesDontIncludeWatchedMovies(categories, watchedMovies);
+    void movieExists_false() {
+        when(movieRepository.existsById(2L)).thenReturn(false);
+        assertFalse(movieService.movieExists(2L));
     }
 
     @Test
-    void testGetAllMoviesWithAvgGrade() {
-        MovieWithAvgGradeDto m1 = new MovieWithAvgGradeDto("Movie 1", 2023, "Action", "Description 1", "Prizes 1", LocalDate.of(2023, 5, 1), LocalDate.of(2023, 6, 1), "Tag 1", 0,4.5);
-        MovieWithAvgGradeDto m2 = new MovieWithAvgGradeDto("Movie 2", 2022, "Drama", "Description 2", "Prizes 2", LocalDate.of(2022, 7, 1), LocalDate.of(2022, 8, 1), "Tag 2", 0,3.8);
-        when(movieRepository.findAllMoviesWithAvgGrade()).thenReturn(Arrays.asList(m1, m2));
+    void getMovieWithAvgGradeById_found() {
+        Long id = 7L;
+        Movie movie = new Movie();
+        MovieWithAvgGradeDto dto = dummyDto("T");
+        when(movieRepository.findById(id)).thenReturn(Optional.of(movie));
+        when(movieMapper.movieToMovieWithAvgGradeDto(movie)).thenReturn(dto);
 
-        List<MovieWithAvgGradeDto> result = movieService.getAllMoviesWithAvgGrade();
+        MovieWithAvgGradeDto result = movieService.getMovieWithAvgGradeById(id);
 
-        assertEquals(2, result.size());
-        verify(movieRepository).findAllMoviesWithAvgGrade();
+        assertSame(dto, result);
     }
 
+    @Test
+    void getMovieWithAvgGradeById_notFound_throws() {
+        when(movieRepository.findById(8L)).thenReturn(Optional.empty());
+        assertThrows(MovieNotFoundException.class, () -> movieService.getMovieWithAvgGradeById(8L));
+    }
 
+    @Test
+    void getAllMoviesWithAvgGradeDto_maps() {
+        Pageable pageable = PageRequest.of(0, 2);
+        Movie m1 = new Movie(); Movie m2 = new Movie();
+        when(movieRepository.findAll(pageable)).thenReturn(new PageImpl<>(List.of(m1, m2), pageable, 2));
+        MovieWithAvgGradeDto d1 = dummyDto("A"); MovieWithAvgGradeDto d2 = dummyDto("B");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m1)).thenReturn(d1);
+        when(movieMapper.movieToMovieWithAvgGradeDto(m2)).thenReturn(d2);
 
+        Page<MovieWithAvgGradeDto> result = movieService.getAllMoviesWithAvgGradeDto(pageable);
 
+        assertEquals(2, result.getTotalElements());
+        assertEquals("A", result.getContent().getFirst().getTitle());
+    }
 
+    @Test
+    void searchMoviesWithAvgGradeByTitle_maps() {
+        String title = "abc";
+        Pageable pageable = PageRequest.of(0, 3);
+        Movie m = new Movie();
+        when(movieRepository.findByTitleIgnoreCaseContaining(title, pageable))
+                .thenReturn(new PageImpl<>(List.of(m), pageable, 1));
+        MovieWithAvgGradeDto dto = dummyDto("abc");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m)).thenReturn(dto);
 
+        Page<MovieWithAvgGradeDto> result = movieService.searchMoviesWithAvgGradeByTitle(title, pageable);
 
+        assertEquals(1, result.getTotalElements());
+        assertEquals("abc", result.getContent().getFirst().getTitle());
+    }
 
+    @Test
+    void findMoviesByCategoryWithAvgGrade_maps() {
+        String category = "Drama";
+        Pageable pageable = PageRequest.of(0, 2);
+        Movie m = new Movie();
+        when(movieRepository.findMoviesByCategory(category, pageable))
+                .thenReturn(new PageImpl<>(List.of(m), pageable, 1));
+        MovieWithAvgGradeDto dto = dummyDto("C");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m)).thenReturn(dto);
 
+        Page<MovieWithAvgGradeDto> result = movieService.findMoviesByCategoryWithAvgGrade(category, pageable);
 
+        assertEquals(1, result.getTotalElements());
+    }
 
+    @Test
+    void getMoviesByTagWithAvgGrade_maps() {
+        String tag = "thriller";
+        Pageable pageable = PageRequest.of(0, 2);
+        Movie m = new Movie();
+        when(movieRepository.findByTagContaining(tag, pageable))
+                .thenReturn(new PageImpl<>(List.of(m), pageable, 1));
+        MovieWithAvgGradeDto dto = dummyDto("Tagged");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m)).thenReturn(dto);
+
+        Page<MovieWithAvgGradeDto> result = movieService.getMoviesByTagWithAvgGrade(tag, pageable);
+
+        assertEquals(1, result.getTotalElements());
+    }
+
+    @Test
+    void getMoviesByPolishPremiereMonthAndYearWithAvgGrade_maps() {
+        int month = 5, year = 2024;
+        Pageable pageable = PageRequest.of(0, 5);
+        Movie m = new Movie();
+        when(movieRepository.findMovieByPolishPremiereMonthAndYear(month, year, pageable))
+                .thenReturn(new PageImpl<>(List.of(m), pageable, 1));
+        MovieWithAvgGradeDto dto = dummyDto("PL");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m)).thenReturn(dto);
+
+        Page<MovieWithAvgGradeDto> result =
+                movieService.getMoviesByPolishPremiereMonthAndYearWithAvgGrade(month, year, pageable);
+
+        assertEquals(1, result.getTotalElements());
+    }
+
+    @Test
+    void getMoviesByWorldPremiereMonthAndYearWithAvgGrade_maps() {
+        int month = 6, year = 2023;
+        Pageable pageable = PageRequest.of(0, 5);
+        Movie m = new Movie();
+        when(movieRepository.findMovieByWorldPremiereMonthAndYear(month, year, pageable))
+                .thenReturn(new PageImpl<>((List.of(m)), pageable, 1));
+        MovieWithAvgGradeDto dto = dummyDto("title");
+        when(movieMapper.movieToMovieWithAvgGradeDto(m)).thenReturn(dto);
+
+        Page<MovieWithAvgGradeDto> result =
+                movieService.getMoviesByWorldPremiereMonthAndYearWithAvgGrade(month, year, pageable);
+
+        assertEquals(1, result.getTotalElements());
+    }
+
+    private MovieWithAvgGradeDto dummyDto(String title) {
+        return new MovieWithAvgGradeDto(
+                title,
+                2024,
+                "Cat",
+                "Desc",
+                "Prizes",
+                LocalDate.of(2024,1,1),
+                LocalDate.of(2024,2,2),
+                "Tag",
+                0,
+                4.0
+        );
+    }
 }
